--- a/Pipfile
+++ b/Pipfile
@@ -1,22 +1,17 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [dev-packages]
-
-"autopep8" = "*"
 "flake8" = "*"
 rope = "*"
-
+pylint = "*"
+"autopep8" = "*"
 
 [packages]
-
 pybuilder = "*"
-
+pylint = "*"
 
 [requires]
-
 python_version = "3.6"
